data/issues_nolabel/nolabel_test_13930.txt
Build failure CUDA8 / cudNN8-v7

System information

Fedora 26 x64:
TensorFlow installed from source:
TensorFlow version commit 53e7541 (oct 23 11:46):
Python version 3.6:
Bazel version 0.5.4:
CUDA 8.0
cuDNN 8.0 v7:
GPU model GTX 1060:
bazel build -c opt --copt=-march=native --config=cuda //tensorflow/tools/pip_package:build_pip_package:

Have tried bazel clean.
.....
external/protobuf_archive/python/google/protobuf/pyext/message.cc: In instantiation of 'bool google::protobuf::python::CheckAndGetInteger(PyObject*, T*) [with T = long unsigned int; PyObject = _object]':
external/protobuf_archive/python/google/protobuf/pyext/message.cc:698:60:   required from here
external/protobuf_archive/python/google/protobuf/pyext/message.cc:635:20: warning: ISO C++ forbids converting a string constant to 'char*' [-Wwrite-strings]
INFO: From Compiling tensorflow/core/lib/strings/numbers.cc:
tensorflow/core/lib/strings/numbers.cc: In function 'std::__cxx11::string tensorflow::strings::HumanReadableNumBytes(tensorflow::int64)':
tensorflow/core/lib/strings/numbers.cc:424:8: warning: '%lld' directive output may be truncated writing between 1 and 19 bytes into a region of size between 7 and 8 [-Wformat-truncation=]
 string HumanReadableNumBytes(int64 num_bytes) {
        ^~~~~~~~~~~~~~~~~~~~~
tensorflow/core/lib/strings/numbers.cc:424:8: note: directive argument in the range [0, 9223372036854775807]
In file included from /usr/include/stdio.h:939:0,
                 from /usr/lib/gcc/x86_64-redhat-linux/7/../../../../include/c++/7/cstdio:42,
                 from /usr/lib/gcc/x86_64-redhat-linux/7/../../../../include/c++/7/ext/string_conversions.h:43,
                 from /usr/lib/gcc/x86_64-redhat-linux/7/../../../../include/c++/7/bits/basic_string.h:6347,
                 from /usr/lib/gcc/x86_64-redhat-linux/7/../../../../include/c++/7/string:52,
                 from ./tensorflow/core/lib/strings/numbers.h:19,
                 from tensorflow/core/lib/strings/numbers.cc:15:
/usr/include/bits/stdio2.h:65:44: note: '__builtin_snprintf' output between 3 and 22 bytes into a destination of size 8
        __bos (__s), __fmt, __va_arg_pack ());
                                            ^
INFO: From Compiling external/nccl_archive/src/all_gather.cu.cc:
/usr/local/cuda-8.0/bin/../targets/x86_64-linux/include/math_functions.h(8897): error: cannot overload functions distinguished by return type alone

/usr/local/cuda-8.0/bin/../targets/x86_64-linux/include/math_functions.h(8901): error: cannot overload functions distinguished by return type alone

2 errors detected in the compilation of "/tmp/tmpxft_00006246_00000000-7_all_gather.cu.cpp1.ii".
ERROR: /home/torstein/.cache/bazel/_bazel_torstein/1f82ba256daa7468e9c0a1514e0b9aa5/external/nccl_archive/BUILD:33:1: output 'external/nccl_archive/_objs/nccl/external/nccl_archive/src/all_gather.cu.pic.o' was not created.
ERROR: /home/torstein/.cache/bazel/_bazel_torstein/1f82ba256daa7468e9c0a1514e0b9aa5/external/nccl_archive/BUILD:33:1: not all outputs were created or valid.
Target //tensorflow/tools/pip_package:build_pip_package failed to build
Use --verbose_failures to see the command lines of failed build steps.
INFO: Elapsed time: 186.358s, Critical Path: 25.29s